--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.0",
     "react-on-screen": "^2.1.1",
     "react-router-dom": "^6.20.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
